feat: add Pup's Choice and Viivaa case studies and update homepage links.

--- a/index.html
+++ b/index.html
@@ -679,98 +679,102 @@
                         </a>
                     </div>
 
-                    <!-- Case Study Card 3: Fintech (Placeholder) -->
+                    <!-- Case Study Card 3: Pup's Choice -->
                     <div class="snap-center shrink-0 w-full md:w-[calc(50%-1rem)]">
-                        <a href="#"
-                            class="group relative block h-[500px] rounded-3xl overflow-hidden border border-white/10 hover:border-secondary/50 transition-all duration-500 hover:shadow-2xl hover:shadow-secondary/10">
+                        <a href="pages/case-study-pups-choice.html"
+                            class="group relative block h-[500px] rounded-3xl overflow-hidden border border-white/10 hover:border-accent/50 transition-all duration-500 hover:shadow-2xl hover:shadow-accent/10">
                             <div class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent z-10">
                             </div>
-                            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&q=80&w=1000"
-                                alt="Fintech Automation"
+                            <!-- Placeholder Image -->
+                            <img src="https://images.unsplash.com/photo-1583511655857-d19b40a7a54e?auto=format&fit=crop&q=80&w=1000"
+                                alt="Pup's Choice Marketing Automation"
                                 class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 grayscale group-hover:grayscale-0">
 
                             <div
                                 class="absolute bottom-0 left-0 right-0 p-8 z-20 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
                                 <div class="flex items-center gap-3 mb-4">
                                     <span
-                                        class="px-3 py-1 rounded-full bg-secondary/60 text-white text-xs font-bold border border-secondary/20">FINTECH</span>
-                                    <span class="text-white text-xs uppercase tracking-wider">Finanse</span>
-                                </div>
-                                <h3
-                                    class="text-white md:text-3xl font-bold mb-2 group-hover:text-secondary transition-colors">
-                                    Automatyzacja Księgowości</h3>
-                                <p class="text-gray-300 mb-6 line-clamp-2 group-hover:text-gray-300">Inteligentny system
-                                    kategoryzacji wydatków i generowania raportów finansowych w czasie rzeczywistym.</p>
-
-                                <div class="grid grid-cols-3 gap-4 mb-6 border-t border-white/10 pt-4">
-                                    <div>
-                                        <div class="text-xl font-bold text-white">-80%</div>
-                                        <div class="text-xs text-gray-500">Czasu pracy</div>
-                                    </div>
-                                    <div>
-                                        <div class="text-xl font-bold text-white">0</div>
-                                        <div class="text-xs text-gray-500">Pomyłek</div>
-                                    </div>
-                                    <div>
-                                        <div class="text-xl font-bold text-white">R-T</div>
-                                        <div class="text-xs text-gray-500">Raporty</div>
-                                    </div>
-                                </div>
-
-                                <div
-                                    class="flex items-center text-secondary font-medium group-hover:gap-2 transition-all">
-                                    Wkrótce <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <!-- Case Study Card 4: E-commerce (Placeholder) -->
-                    <div class="snap-center shrink-0 w-full md:w-[calc(50%-1rem)]">
-                        <a href="#"
-                            class="group relative block h-[500px] rounded-3xl overflow-hidden border border-white/10 hover:border-primary/50 transition-all duration-500 hover:shadow-2xl hover:shadow-primary/10">
-                            <div class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent z-10">
-                            </div>
-                            <img src="https://images.unsplash.com/photo-1556742049-0cfed4f7a07d?auto=format&fit=crop&q=80&w=1000"
-                                alt="E-commerce Automation"
-                                class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 grayscale group-hover:grayscale-0">
-
-                            <div
-                                class="absolute bottom-0 left-0 right-0 p-8 z-20 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                                <div class="flex items-center gap-3 mb-4">
-                                    <span
-                                        class="px-3 py-1 rounded-full bg-primary/60 text-white text-xs font-bold border border-primary/20">RETAIL</span>
+                                        class="px-3 py-1 rounded-full bg-accent/60 text-white text-xs font-bold border border-accent/20">Pup's
+                                        Choice</span>
                                     <span class="text-white text-xs uppercase tracking-wider">E-commerce</span>
                                 </div>
                                 <h3
-                                    class="text-white md:text-3xl font-bold mb-2 group-hover:text-primary transition-colors">
-                                    Inteligentna Obsługa Zwrotów</h3>
-                                <p class="text-gray-300 mb-6 line-clamp-2 group-hover:text-gray-300">Automatyczna
-                                    weryfikacja
-                                    zgłoszeń i generowanie etykiet, skracająca czas obsługi o 90%.</p>
+                                    class="text-white md:text-3xl font-bold mb-2 group-hover:text-accent transition-colors">
+                                    Automatyzacja Marketingu E-commerce</h3>
+                                <p class="text-gray-300 mb-6 line-clamp-2 group-hover:text-gray-300">Inteligentny system
+                                    dotarcia do 2000+ klientów, który zwiększa sprzedaż i buduje lojalność bez
+                                    dodatkowej pracy.</p>
 
                                 <div class="grid grid-cols-3 gap-4 mb-6 border-t border-white/10 pt-4">
                                     <div>
-                                        <div class="text-xl font-bold text-white">90%</div>
-                                        <div class="text-xs text-gray-500">Szybciej</div>
+                                        <div class="text-xl font-bold text-white">2000+</div>
+                                        <div class="text-xs text-gray-500">Klientów</div>
                                     </div>
                                     <div>
-                                        <div class="text-xl font-bold text-white">24h</div>
-                                        <div class="text-xs text-gray-500">Zwrot</div>
+                                        <div class="text-xl font-bold text-white">Wzrost</div>
+                                        <div class="text-xs text-gray-500">Sprzedaży</div>
                                     </div>
                                     <div>
-                                        <div class="text-xl font-bold text-white">5/5</div>
-                                        <div class="text-xs text-gray-500">Opinie</div>
+                                        <div class="text-xl font-bold text-white">Auto</div>
+                                        <div class="text-xs text-gray-500">Działanie</div>
                                     </div>
                                 </div>
 
                                 <div
-                                    class="flex items-center text-primary-text font-medium group-hover:gap-2 transition-all">
-                                    Wkrótce <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                                    class="flex items-center text-accent-text font-medium group-hover:gap-2 transition-all">
+                                    Zobacz case study <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
                                 </div>
                             </div>
                         </a>
                     </div>
+                    <div class="snap-center shrink-0 w-full md:w-[calc(50%-1rem)]">
+                        <a href="pages/case-study-viivaa.html"
+                            class="group relative block h-[500px] rounded-3xl overflow-hidden border border-white/10 hover:border-accent/50 transition-all duration-500 hover:shadow-2xl hover:shadow-accent/10">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent z-10">
+                            </div>
+                            <!-- Fixed Image -->
+                            <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&q=80&w=1000"
+                                alt="Viivaa.de Interview process"
+                                class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 grayscale group-hover:grayscale-0">
+
+                            <div
+                                class="absolute bottom-0 left-0 right-0 p-8 z-20 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
+                                <div class="flex items-center gap-3 mb-4">
+                                    <span
+                                        class="px-3 py-1 rounded-full bg-accent/60 text-white text-xs font-bold border border-accent/20">Viivaa.de</span>
+                                    <span class="text-white text-xs uppercase tracking-wider">Rekrutacja</span>
+                                </div>
+                                <h3
+                                    class="text-white md:text-3xl font-bold mb-2 group-hover:text-accent transition-colors">
+                                    AI-Asystent Poszukiwania Pracy</h3>
+                                <p class="text-gray-300 mb-6 line-clamp-2 group-hover:text-gray-300">Prototyp MVP
+                                    łączący analizę CV, dopasowanie do ofert i voice interview - kompleksowe wsparcie
+                                    kandydatów w jednym narzędziu.</p>
+
+                                <div class="grid grid-cols-3 gap-4 mb-6 border-t border-white/10 pt-4">
+                                    <div>
+                                        <div class="text-xl font-bold text-white">MVP</div>
+                                        <div class="text-xs text-gray-500">Niskim kosztem</div>
+                                    </div>
+                                    <div>
+                                        <div class="text-xl font-bold text-white">AI Voice</div>
+                                        <div class="text-xs text-gray-500">Wywiad</div>
+                                    </div>
+                                    <div>
+                                        <div class="text-xl font-bold text-white">Analiza</div>
+                                        <div class="text-xs text-gray-500">Automatyczna</div>
+                                    </div>
+                                </div>
+
+                                <div
+                                    class="flex items-center text-accent-text font-medium group-hover:gap-2 transition-all">
+                                    Zobacz case study <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+
                 </div>
             </div>
         </div>
