--- a/pages/case-study-pups-choice.html
+++ b/pages/case-study-pups-choice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eticod Case Study - Flu inty</title>
+    <title>Pup's Choice Case Study - Fluinty</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,8 +25,8 @@
                 extend: {
                     colors: {
                         background: '#F8FAFC',
-                        urface: '#FFFFFF',
-                        imary: '#00C4B4',
+                        surface: '#FFFFFF',
+                        primary: '#00C4B4',
                         accent: '#2DD4BF',
                         'accent-glow': '#7bdcb5',
                         secondary: '#0B3D70',
@@ -72,7 +72,7 @@
     <section class="relative min-h-[60vh] flex items-center justify-center pt-20 overflow-hidden">
         <div class="absolute inset-0 z-0">
             <div
-                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
+                class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1583337130417-3346a1be7dee?auto=format&fit=crop&q=80&w=2000')] bg-cover bg-center opacity-20">
             </div>
             <div class="absolute inset-0 bg-gradient-to-t from-background via-background/80 to-transparent"></div>
         </div>
@@ -80,15 +80,15 @@
         <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
             <div
                 class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-primary/10 border border-primary/20 mb-8 backdrop-blur-sm">
-                <span class="text-sm font-bold text-primary uppercase tracking-wider">Poligrafia</span>
+                <span class="text-sm font-bold text-primary uppercase tracking-wider">E-commerce / Marketing</span>
             </div>
 
             <h1 class="text-4xl md:text-6xl font-display font-bold tracking-tight mb-6 leading-tight">
-                Automatyzacja Procesowania Zamówień dla Eticod
+                Hiper-personalizacja Marketingu dla Pup's Choice
             </h1>
 
             <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                Inteligentny system przetwarzający zamówienia od e-maila do ERP, oszczędzający 160 godzin miesięcznie.
+                Automatyzacja zbierania danych o klientach i inteligentne kampanie e-mailowe, które budują lojalność.
             </p>
         </div>
     </section>
@@ -97,20 +97,20 @@
     <section class="py-12 border-y border-gray-200 bg-surface/30">
         <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
             <div>
-                <div class="text-4xl font-bold text-primary mb-2">160h</div>
-                <div class="text-sm text-gray-600">Zaoszczędzone miesięcznie</div>
+                <div class="text-4xl font-bold text-primary mb-2">35%</div>
+                <div class="text-sm text-gray-600">Wzrost Open Rate</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-accent">0%</div>
-                <div class="text-sm text-gray-600">Błędów w danych</div>
+                <div class="text-4xl font-bold text-accent">20%</div>
+                <div class="text-sm text-gray-600">Wzrost Sprzedaży</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-secondary">24/7</div>
-                <div class="text-sm text-gray-600">Czas pracy systemu</div>
+                <div class="text-4xl font-bold text-secondary">100%</div>
+                <div class="text-sm text-gray-600">Automatyzacji</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-gray-900">10x</div>
-                <div class="text-sm text-gray-600">Szybsza obsługa</div>
+                <div class="text-4xl font-bold text-gray-900">5k+</div>
+                <div class="text-sm text-gray-600">Aktywnych Profili</div>
             </div>
         </div>
     </section>
@@ -124,10 +124,8 @@
                 <h2 class="text-2xl font-display font-bold text-primary">O Kliencie</h2>
                 <div>
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Eticod to lider w branży poligraficznej z 30-letnim doświadczeniem. Specjalizują się w
-                        nowoczesnym druku fleksograficznym i cyfrowym, obsługując tysiące zamówień miesięcznie. Jako
-                        firma stawiająca na innowacje, szukali sposobu na usprawnienie procesu przyjmowania
-                        zamówień.
+                        Pup's Choice to marka dbająca o to, by każdy pies otrzymywał to, co dla niego najlepsze. Oferują
+                        starannie wyselekcjonowane produkty dla czworonogów, stawiając na jakość i zdrowie pupili.
                     </p>
                 </div>
             </div>
@@ -137,25 +135,25 @@
                 <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
                 <div class="space-y-6">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Proces obsługi zamówień był w pełni manualny. Pracownicy musieli ręcznie przepisywać dane z
-                        e-maili do systemu ERP.
+                        Firma chciała lepiej zrozumieć potrzeby swoich klientów i ich pupili, aby oferować im produkty
+                        idealnie dopasowane do rasy, wieku czy preferencji żywieniowych. Standardowe newslettery nie
+                        przynosiły oczekiwanych rezultatów.
                     </p>
                     <ul class="space-y-4">
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="x-circle" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="mail-warning" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Strata Czasu</h3>
-                                <p class="text-sm text-gray-600">Średnio 160 godzin miesięcznie poświęcano na samo
-                                    przepisywanie danych.</p>
+                                <h3 class="font-bold mb-1">Niska Skuteczność</h3>
+                                <p class="text-sm text-gray-600">Masowe wysyłki e-maili miały niski wskaźnik otwarć i
+                                    konwersji.</p>
                             </div>
                         </li>
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
-                            <i data-lucide="alert-octagon" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
+                            <i data-lucide="database" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold mb-1">Ryzyko Błędów</h3>
-                                <p class="text-sm text-gray-600">Ręczne wprowadzanie danych generowało pomyłki,
-                                    które
-                                    kosztowały firmę pieniądze i reputację.</p>
+                                <h3 class="font-bold mb-1">Brak Danych</h3>
+                                <p class="text-sm text-gray-600">Brak wiedzy o konkretnych potrzebach pupili klientów
+                                    uniemożliwiał personalizację oferty.</p>
                             </div>
                         </li>
                     </ul>
@@ -167,32 +165,32 @@
                 <h2 class="text-2xl font-display font-bold text-primary">Rozwiązanie</h2>
                 <div class="space-y-8">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Wdrożyliśmy inteligentnego agenta AI, który przejął kontrolę nad procesem zamówień.
+                        Wdrożyliśmy zaawansowany system Marketing Automation, który zbiera dane i wykorzystuje je do
+                        tworzenia spersonalizowanej komunikacji.
                     </p>
 
                     <div class="relative border-l-2 border-primary/30 pl-8 space-y-12">
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">1. Monitoring Email</h3>
-                            <p class="text-gray-600">System automatycznie skanuje skrzynkę odbiorczą w poszukiwaniu
-                                nowych zamówień.</p>
+                            <h3 class="text-xl font-bold mb-2">1. Inteligentne Ankiety</h3>
+                            <p class="text-gray-600">Stworzyliśmy interaktywne formularze, które zbierają szczegółowe
+                                informacje o pupilach (rasa, wiek, alergie) w zamian za wartościowe porady.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">2. Ekstrakcja Danych (OCR/AI)</h3>
-                            <p class="text-gray-600">Zaawansowane algorytmy wyciągają kluczowe informacje z treści
-                                maila
-                                i załączników (PDF, Excel).</p>
+                            <h3 class="text-xl font-bold mb-2">2. Segmentacja AI</h3>
+                            <p class="text-gray-600">System automatycznie tworzy profile klientów i segmentuje bazę na
+                                podstawie zebranych danych, identyfikując grupy o podobnych potrzebach.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">3. Walidacja i Integracja</h3>
-                            <p class="text-gray-600">Dane są sprawdzane pod kątem poprawności, a następnie
-                                automatycznie
-                                wprowadzane do systemu ERP.</p>
+                            <h3 class="text-xl font-bold mb-2">3. Personalizowane Kampanie</h3>
+                            <p class="text-gray-600">System wysyła "szyte na miarę" e-maile z rekomendacjami produktów,
+                                poradami żywieniowymi i przypomnieniami o zakupach, idealnie dopasowane do każdego
+                                pupila.</p>
                         </div>
                     </div>
                 </div>
@@ -203,19 +201,19 @@
                 <h2 class="text-2xl font-display font-bold text-primary">Rezultaty</h2>
                 <div>
                     <div class="p-8 rounded-3xl bg-gradient-to-br from-primary/20 to-accent/20 border border-gray-200">
-                        <h3 class="text-2xl font-bold mb-6">Transformacja Biznesowa</h3>
+                        <h3 class="text-2xl font-bold mb-6">Wzrost Zaangażowania</h3>
                         <div class="space-y-6">
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Oszczędność czasu</span>
-                                <span class="text-xl font-bold text-green-600">160h / msc</span>
+                                <span>Wzrost Open Rate</span>
+                                <span class="text-xl font-bold text-green-600">35%</span>
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Błędy przy wprowadzaniu</span>
-                                <span class="text-xl font-bold text-green-600">Wyeliminowane</span>
+                                <span>Wzrost Sprzedaży</span>
+                                <span class="text-xl font-bold text-green-600">20%</span>
                             </div>
                             <div class="flex items-center justify-between">
-                                <span>Czas reakcji na zamówienie</span>
-                                <span class="text-xl font-bold text-green-600">Natychmiastowy</span>
+                                <span>Satysfakcja Klientów</span>
+                                <span class="text-xl font-bold text-green-600">Wysoka</span>
                             </div>
                         </div>
                     </div>
@@ -229,8 +227,8 @@
     <section class="py-24 border-t border-gray-200">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <p class="text-gray-500 mb-4">Następna realizacja</p>
-            <h2 class="text-3xl md:text-5xl font-display font-bold mb-8">Pup's Choice: Hiper-personalizacja</h2>
-            <a href="case-study-pups-choice.html"
+            <h2 class="text-3xl md:text-5xl font-display font-bold mb-8">Viivaa.de: AI Asystent</h2>
+            <a href="case-study-viivaa.html"
                 class="inline-flex items-center gap-2 px-8 py-4 rounded-full bg-primary text-white font-bold hover:bg-primary/90 transition-colors">
                 Zobacz Case Study <i data-lucide="arrow-right" class="w-5 h-5"></i>
             </a>
