fix: Corrected typos in title and Tailwind config, and updated the next case study link and title.

--- a/pages/case-study-eticod.html
+++ b/pages/case-study-eticod.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eticod Case Study - Flu inty</title>
+    <title>Eticod Case Study - Fluinty</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,8 +25,8 @@
                 extend: {
                     colors: {
                         background: '#F8FAFC',
-                        urface: '#FFFFFF',
-                        imary: '#00C4B4',
+                        surface: '#FFFFFF',
+                        primary: '#00C4B4',
                         accent: '#2DD4BF',
                         'accent-glow': '#7bdcb5',
                         secondary: '#0B3D70',
@@ -229,8 +229,8 @@
     <section class="py-24 border-t border-gray-200">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <p class="text-gray-500 mb-4">Następna realizacja</p>
-            <h2 class="text-3xl md:text-5xl font-display font-bold mb-8">Pup's Choice: Hiper-personalizacja</h2>
-            <a href="case-study-pups-choice.html"
+            <h2 class="text-3xl md:text-5xl font-display font-bold mb-8">Art-Tim: Zarządzanie Flotą</h2>
+            <a href="case-study-art-tim.html"
                 class="inline-flex items-center gap-2 px-8 py-4 rounded-full bg-primary text-white font-bold hover:bg-primary/90 transition-colors">
                 Zobacz Case Study <i data-lucide="arrow-right" class="w-5 h-5"></i>
             </a>
