--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
 
             <!-- Mobile Menu Button -->
-            <button id="mobile-menu-btn" class="lg:hidden text-white p-2" aria-label="Menu">
+            <button id="mobile-menu-btn" class="lg:hidden text-text-main p-2" aria-label="Menu">
                 <i data-lucide="menu" class="w-6 h-6"></i>
             </button>
         </div>
@@ -114,13 +114,13 @@
     <!-- Mobile Menu Overlay -->
     <div id="mobile-menu"
         class="fixed inset-0 z-40 bg-background/95 backdrop-blur-xl transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col justify-center items-center gap-8">
-        <button id="close-menu-btn" class="absolute top-6 right-6 text-white p-2">
+        <button id="close-menu-btn" class="absolute top-6 right-6 text-text-main p-2">
             <i data-lucide="x" class="w-8 h-8"></i>
         </button>
-        <a href="#problem" class="mobile-link text-2xl font-display font-medium text-white">Wyzwania</a>
-        <a href="#services" class="mobile-link text-2xl font-display font-medium text-white">Rozwiązania</a>
-        <a href="#case-studies" class="mobile-link text-2xl font-display font-medium text-white">Realizacje</a>
-        <a href="#pricing" class="mobile-link text-2xl font-display font-medium text-white">Cennik</a>
+        <a href="#problem" class="mobile-link text-2xl font-display font-medium text-text-main">Wyzwania</a>
+        <a href="#services" class="mobile-link text-2xl font-display font-medium text-text-main">Rozwiązania</a>
+        <a href="#case-studies" class="mobile-link text-2xl font-display font-medium text-text-main">Realizacje</a>
+        <a href="#pricing" class="mobile-link text-2xl font-display font-medium text-text-main">Cennik</a>
         <a href="#contact"
             class="mobile-link px-8 py-3 rounded-full bg-primary text-white font-medium text-lg shadow-lg shadow-primary/25">
             Rozpocznij
@@ -556,6 +556,7 @@
     </section>
 
     <!-- Case Studies Preview Section -->
+    <!-- Case Studies Preview Section -->
     <section id="case-studies" class="py-32 relative overflow-hidden">
         <div class="max-w-7xl mx-auto px-6">
             <div class="flex flex-col mb-16 gap-6 text-center md:text-left">
@@ -672,7 +673,7 @@
                                 </div>
 
                                 <div
-                                    class="flex items-center text-accent-text font-medium group-hover:gap-2 transition-all">
+                                    class="flex items-center text-primary-text font-medium group-hover:gap-2 transition-all">
                                     Zobacz case study <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
                                 </div>
                             </div>
@@ -721,7 +722,7 @@
                                 </div>
 
                                 <div
-                                    class="flex items-center text-accent-text font-medium group-hover:gap-2 transition-all">
+                                    class="flex items-center text-primary-text font-medium group-hover:gap-2 transition-all">
                                     Zobacz case study <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
                                 </div>
                             </div>
@@ -767,7 +768,7 @@
                                 </div>
 
                                 <div
-                                    class="flex items-center text-accent-text font-medium group-hover:gap-2 transition-all">
+                                    class="flex items-center text-primary-text font-medium group-hover:gap-2 transition-all">
                                     Zobacz case study <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
                                 </div>
                             </div>
@@ -817,7 +818,7 @@
                 <div
                     class="p-8 rounded-3xl bg-primary/10 border border-primary/50 relative transform md:-translate-y-4">
                     <div
-                        class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 px-4 py-1 bg-primary text-white text-xs font-bold rounded-full uppercase tracking-wider">
+                        class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 px-4 py-1 bg-primary text-white text-xs font-bold rounded-full uppercase tracking-wider flex justify-center items-center text-center whitespace-nowrap">
                         Najczęściej Wybierany</div>
                     <h3 class="text-xl font-bold mb-2 text-main">WZROST</h3>
                     <div class="text-3xl font-bold text-primary-text mb-6">od 3000 PLN <span
@@ -980,25 +981,25 @@
                         <form class="space-y-6">
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
-                                    <label for="modal-name" class="block text-sm font-medium text-gray-300 mb-2">Imię i
+                                    <label for="modal-name" class="block text-sm font-medium text-text-main mb-2">Imię i
                                         Nazwisko</label>
                                     <input type="text" id="modal-name"
-                                        class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
+                                        class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3 text-text-main focus:outline-none focus:border-primary/50 transition-colors"
                                         placeholder="Jan Kowalski">
                                 </div>
                                 <div>
-                                    <label for="modal-email" class="block text-sm font-medium text-gray-300 mb-2">Email
+                                    <label for="modal-email" class="block text-sm font-medium text-text-main mb-2">Email
                                         Firmowy</label>
                                     <input type="email" id="modal-email"
-                                        class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
+                                        class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3 text-text-main focus:outline-none focus:border-primary/50 transition-colors"
                                         placeholder="jan@firma.pl">
                                 </div>
                             </div>
                             <div>
-                                <label for="modal-message" class="block text-sm font-medium text-gray-300 mb-2">O czym
+                                <label for="modal-message" class="block text-sm font-medium text-text-main mb-2">O czym
                                     chcesz porozmawiać?</label>
                                 <textarea id="modal-message" rows="4"
-                                    class="w-full bg-background border border-white/10 rounded-xl px-4 py-3 text-white focus:outline-none focus:border-primary/50 transition-colors"
+                                    class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3 text-text-main focus:outline-none focus:border-primary/50 transition-colors"
                                     placeholder="Opisz krótko swój proces..."></textarea>
                             </div>
                             <button type="submit"
