--- a/pages/case-study-pups-choice.html
+++ b/pages/case-study-pups-choice.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pl" class="scroll-smooth">
 
 <head>
@@ -223,15 +223,30 @@
         </div>
     </section>
 
-    <!-- Next Case Study -->
+    <!-- Navigation -->
     <section class="py-24 border-t border-gray-200">
-        <div class="max-w-7xl mx-auto px-6 text-center">
-            <p class="text-gray-500 mb-4">Następna realizacja</p>
-            <h2 class="text-3xl md:text-5xl font-display font-bold mb-8">Viivaa.de: AI Asystent</h2>
-            <a href="case-study-viivaa.html"
-                class="inline-flex items-center gap-2 px-8 py-4 rounded-full bg-primary text-white font-bold hover:bg-primary/90 transition-colors">
-                Zobacz Case Study <i data-lucide="arrow-right" class="w-5 h-5"></i>
-            </a>
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="grid md:grid-cols-2 gap-8">
+                <!-- Previous -->
+                <a href="case-study-art-tim.html"
+                    class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
+                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
+                        <i data-lucide="arrow-left" class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
+                        Poprzednia realizacja
+                    </div>
+                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Art-Tim</h3>
+                </a>
+
+                <!-- Next -->
+                <a href="case-study-viivaa.html"
+                    class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
+                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
+                        Następna realizacja
+                        <i data-lucide="arrow-right" class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
+                    </div>
+                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Viivaa.de</h3>
+                </a>
+            </div>
         </div>
     </section>
 
