--- a/index.html
+++ b/index.html
@@ -276,7 +276,149 @@
         </div>
     </section>
 
-    <!-- Problem Section -->
+    <!-- Savings Calculator Section -->
+    <section class="py-24 bg-white relative overflow-hidden">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="grid lg:grid-cols-2 gap-16 items-center">
+                <!-- Left Column: Content -->
+                <div>
+                    <h2 class="text-4xl md:text-6xl font-display font-bold mb-6 text-text-main leading-tight">
+                        Kalkulator<br>oszczędności
+                    </h2>
+                    <p class="text-text-muted text-lg mb-12 max-w-lg">
+                        Chcesz wiedzieć, ile czasu i pieniędzy możesz oszczędzić dzięki <strong>Fluinty</strong>?
+                        Skorzystaj z naszego kalkulatora AI i zobacz różnicę na własne oczy.
+                    </p>
+
+                    <div class="space-y-6">
+                        <!-- Benefit 1 -->
+                        <div class="flex items-start gap-4 p-4 rounded-2xl bg-white border border-gray-100 shadow-sm">
+                            <div class="w-12 h-12 rounded-full bg-primary/10 flex items-center justify-center shrink-0">
+                                <i data-lucide="clock" class="w-6 h-6 text-primary"></i>
+                            </div>
+                            <div>
+                                <h3 class="font-bold text-text-main text-lg">Odzyskaj setry godzin rocznie</h3>
+                                <p class="text-sm text-text-muted">Twój zespół przestanie tracić czas na "klikanie".</p>
+                            </div>
+                        </div>
+
+                        <!-- Benefit 2 -->
+                        <div class="flex items-start gap-4 p-4 rounded-2xl bg-white border border-gray-100 shadow-sm">
+                            <div class="w-12 h-12 rounded-full bg-accent/10 flex items-center justify-center shrink-0">
+                                <i data-lucide="wallet" class="w-6 h-6 text-accent"></i>
+                            </div>
+                            <div>
+                                <h3 class="font-bold text-text-main text-lg">Zredukuj koszty operacyjne o 80%</h3>
+                                <p class="text-sm text-text-muted">Automatyzacja jest tańsza niż błędy ludzkie.</p>
+                            </div>
+                        </div>
+
+                        <!-- Benefit 3 -->
+                        <div class="flex items-start gap-4 p-4 rounded-2xl bg-white border border-gray-100 shadow-sm">
+                            <div class="w-12 h-12 rounded-full bg-accent/10 flex items-center justify-center shrink-0">
+                                <i data-lucide="zap" class="w-6 h-6 text-accent"></i>
+                            </div>
+                            <div>
+                                <h3 class="font-bold text-text-main text-lg">Skaluj biznes bez nowych rekrutacji</h3>
+                                <p class="text-sm text-text-muted">Obsłuż 10x więcej klientów tym samym zespołem.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Right Column: Calculator (Dark Theme) -->
+                <div class="bg-slate-900 rounded-[2.5rem] p-8 md:p-12 shadow-2xl relative overflow-hidden text-white">
+                    <!-- Background Glow -->
+                    <div
+                        class="absolute top-0 right-0 w-64 h-64 bg-primary/20 rounded-full blur-[100px] pointer-events-none">
+                    </div>
+                    <div
+                        class="absolute bottom-0 left-0 w-64 h-64 bg-accent/20 rounded-full blur-[100px] pointer-events-none">
+                    </div>
+
+                    <div class="relative z-10">
+                        <!-- Hours Slider -->
+                        <div class="mb-10">
+                            <div class="flex justify-between items-center mb-4">
+                                <label class="text-lg font-medium text-gray-200">Ile godzin miesięcznie?</label>
+                                <div
+                                    class="bg-white/10 backdrop-blur-md px-4 py-2 rounded-lg border border-white/10 font-bold text-primary min-w-[80px] text-center">
+                                    <span id="hours-display">160</span>h
+                                </div>
+                            </div>
+                            <input type="range" min="0" max="1000" value="160" class="range-slider dark-slider"
+                                id="hours-slider">
+                            <div class="flex justify-between text-gray-400 text-xs mt-2">
+                                <span>0</span>
+                                <span>1000</span>
+                            </div>
+                        </div>
+
+                        <!-- Hourly Cost Slider -->
+                        <div class="mb-12">
+                            <div class="flex justify-between items-center mb-4">
+                                <label class="text-lg font-medium text-gray-200">Koszt godziny pracy (brutto)</label>
+                                <div
+                                    class="bg-white/10 backdrop-blur-md px-4 py-2 rounded-lg border border-white/10 font-bold text-primary min-w-[100px] text-center">
+                                    <span id="cost-display">50</span> PLN
+                                </div>
+                            </div>
+                            <input type="range" min="0" max="500" value="50" class="range-slider dark-slider"
+                                id="cost-slider">
+                            <div class="flex justify-between text-gray-400 text-xs mt-2">
+                                <span>0</span>
+                                <span>500</span>
+                            </div>
+                        </div>
+
+                        <!-- Visual ROI Comparison -->
+                        <div class="bg-white/5 rounded-2xl p-6 border border-white/10 backdrop-blur-sm">
+                            <h3 class="text-sm font-medium text-gray-400 mb-4 uppercase tracking-wider">Porównanie
+                                Kosztów Rocznych</h3>
+
+                            <!-- Manual Bar -->
+                            <div class="mb-4">
+                                <div class="flex justify-between text-sm mb-1">
+                                    <span class="text-gray-300">Obecnie (Manualnie)</span>
+                                    <span class="font-bold text-white" id="manual-cost-display">96 000 PLN</span>
+                                </div>
+                                <div class="h-3 bg-white/10 rounded-full overflow-hidden">
+                                    <div id="manual-bar"
+                                        class="h-full bg-red-500/80 rounded-full transition-all duration-500"
+                                        style="width: 100%"></div>
+                                </div>
+                            </div>
+
+                            <!-- Fluinty Bar -->
+                            <div class="mb-6">
+                                <div class="flex justify-between text-sm mb-1">
+                                    <span class="text-primary font-bold flex items-center gap-2">
+                                        <i data-lucide="sparkles" class="w-3 h-3"></i> Z Fluinty (AI)
+                                    </span>
+                                    <span class="font-bold text-primary" id="fluinty-cost-display">19 200 PLN</span>
+                                </div>
+                                <div class="h-3 bg-white/10 rounded-full overflow-hidden">
+                                    <div id="fluinty-bar"
+                                        class="h-full bg-primary rounded-full shadow-[0_0_15px_rgba(45,212,191,0.5)] transition-all duration-500"
+                                        style="width: 20%"></div>
+                                </div>
+                            </div>
+
+                            <!-- Savings Highlight -->
+                            <div class="pt-4 border-t border-white/10 text-center">
+                                <p class="text-gray-400 text-sm mb-1">Twoje roczne oszczędności:</p>
+                                <p
+                                    class="text-3xl md:text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-primary to-accent animate-pulse-slow">
+                                    <span id="savings-display">76 800</span> PLN
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="problem" class="py-24 bg-white">
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-16 items-center">
