Update case study and index content

--- a/pages/case-study-eticod.html
+++ b/pages/case-study-eticod.html
@@ -84,12 +84,13 @@
             </div>
 
             <h1 class="text-4xl md:text-6xl font-display font-bold tracking-tight mb-6 leading-tight">
-                Automatyzacja Procesowania Zamówień dla Eticod
+                Automatyzacja Procesowania Zamówień dla Eticod sp. z o.o.
             </h1>
 
             <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                Inteligentny system przetwarzający zamówienia od e-maila do ERP, oszczędzający 160 godzin miesięcznie.
-            </p>
+                Dzięki Zautomatyzowanemu systemowi przetwarzania zamówień eliminującemu pracę manualną udało się
+                zaoszczędzić setki godzin miesięcznie
+                spędzanych na obsłudze zamówień i znacząco zmniejszyć ilość błędów operacyjnych.</p>
         </div>
     </section>
 
@@ -97,11 +98,11 @@
     <section class="py-12 border-y border-gray-200 bg-surface/30">
         <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
             <div>
-                <div class="text-4xl font-bold text-primary mb-2">160h</div>
+                <div class="text-4xl font-bold text-primary mb-2">~160h</div>
                 <div class="text-sm text-gray-600">Zaoszczędzone miesięcznie</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-accent">0%</div>
+                <div class="text-4xl font-bold text-accent">0</div>
                 <div class="text-sm text-gray-600">Błędów w danych</div>
             </div>
             <div>
@@ -109,8 +110,8 @@
                 <div class="text-sm text-gray-600">Czas pracy systemu</div>
             </div>
             <div>
-                <div class="text-4xl font-bold text-gray-900">10x</div>
-                <div class="text-sm text-gray-600">Szybsza obsługa</div>
+                <div class="text-4xl font-bold text-gray-900">Real-time</div>
+                <div class="text-sm text-gray-600">Wykrywanie niespójności danych</div>
             </div>
         </div>
     </section>
@@ -137,15 +138,15 @@
                 <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
                 <div class="space-y-6">
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Proces obsługi zamówień był w pełni manualny. Pracownicy musieli ręcznie przepisywać dane z
-                        e-maili do systemu ERP.
+                        Dziesiątki zamówień dziennie przetwarzanych ręcznie. Przepisywanie danych, weryfikacja,
+                        wprowadzanie do ERP - godziny powtarzalnej pracy.
                     </p>
                     <ul class="space-y-4">
                         <li class="flex items-start gap-4 p-4 rounded-xl bg-gray-100 border border-gray-200">
                             <i data-lucide="x-circle" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
                                 <h3 class="font-bold mb-1">Strata Czasu</h3>
-                                <p class="text-sm text-gray-600">Średnio 160 godzin miesięcznie poświęcano na samo
+                                <p class="text-sm text-gray-600">Setki godzin miesięcznie poświęcano na samo
                                     przepisywanie danych.</p>
                             </div>
                         </li>
@@ -153,9 +154,9 @@
                             <i data-lucide="alert-octagon" class="w-6 h-6 text-red-500 shrink-0 mt-1"></i>
                             <div>
                                 <h3 class="font-bold mb-1">Ryzyko Błędów</h3>
-                                <p class="text-sm text-gray-600">Ręczne wprowadzanie danych generowało pomyłki,
-                                    które
-                                    kosztowały firmę pieniądze i reputację.</p>
+                                <p class="text-sm text-gray-600">Każdy nawet najmniejszy błąd w danych to łańcuch
+                                    konsekwencji - czas poświęcony na wykrycie problemu, znalezienie źródła, korektę w
+                                    systemie i weryfikację.</p>
                             </div>
                         </li>
                     </ul>
@@ -174,17 +175,17 @@
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">1. Monitoring Email</h3>
+                            <h3 class="text-xl font-bold mb-2">1. Monitoring</h3>
                             <p class="text-gray-600">System automatycznie skanuje skrzynkę odbiorczą w poszukiwaniu
                                 nowych zamówień.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-primary border-4 border-background"></span>
-                            <h3 class="text-xl font-bold mb-2">2. Ekstrakcja Danych (OCR/AI)</h3>
+                            <h3 class="text-xl font-bold mb-2">2. Ekstrakcja Danych</h3>
                             <p class="text-gray-600">Zaawansowane algorytmy wyciągają kluczowe informacje z treści
                                 maila
-                                i załączników (PDF, Excel).</p>
+                                i załączników.</p>
                         </div>
                         <div class="relative">
                             <span
@@ -207,7 +208,7 @@
                         <div class="space-y-6">
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Oszczędność czasu</span>
-                                <span class="text-xl font-bold text-green-600">160h / msc</span>
+                                <span class="text-xl font-bold text-green-600">~160h / msc</span>
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Błędy przy wprowadzaniu</span>
@@ -232,21 +233,29 @@
                 <!-- Previous -->
                 <a href="case-study-viivaa.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
-                        <i data-lucide="arrow-left" class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
+                        <i data-lucide="arrow-left"
+                            class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
                         Poprzednia realizacja
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Viivaa.de</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Viivaa.de</h3>
                 </a>
 
                 <!-- Next -->
                 <a href="case-study-art-tim.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
                         Następna realizacja
-                        <i data-lucide="arrow-right" class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
+                        <i data-lucide="arrow-right"
+                            class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Art-Tim</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Art-Tim</h3>
                 </a>
             </div>
         </div>
