--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                 <i data-lucide="clock" class="w-6 h-6 text-primary"></i>
                             </div>
                             <div>
-                                <h3 class="font-bold text-text-main text-lg">Odzyskaj setry godzin rocznie</h3>
+                                <h3 class="font-bold text-text-main text-lg">Odzyskaj setki godzin rocznie</h3>
                                 <p class="text-sm text-text-muted">Twój zespół przestanie tracić czas na "klikanie".</p>
                             </div>
                         </div>
@@ -750,20 +750,21 @@
                                     Automatyzacja Procesowania Zamówień</h3>
                                 <p class="text-gray-300 mb-6 line-clamp-2 group-hover:text-gray-300">160 godzin
                                     miesięcznie
-                                    uwolnionego czasu dzięki inteligentnej automatyzacji od emaila do ERP.</p>
+                                    uwolnionego czasu dzięki inteligentnej automatyzacji wprowadzania danych do systemu
+                                    ERP.</p>
 
                                 <div class="grid grid-cols-3 gap-4 mb-6 border-t border-white/10 pt-4">
                                     <div>
                                         <div class="text-xl font-bold text-white">160h</div>
-                                        <div class="text-xs text-gray-500">Miesięcznie</div>
+                                        <div class="text-xs text-gray-500">Oszczędności miesięcznie</div>
                                     </div>
                                     <div>
-                                        <div class="text-xl font-bold text-white">0%</div>
-                                        <div class="text-xs text-gray-500">Błędów</div>
+                                        <div class="text-xl font-bold text-white">0</div>
+                                        <div class="text-xs text-gray-500">Błędów przy wprowadzniu danych</div>
                                     </div>
                                     <div>
                                         <div class="text-xl font-bold text-white">24/7</div>
-                                        <div class="text-xs text-gray-500">Działanie</div>
+                                        <div class="text-xs text-gray-500">Działanie systemu</div>
                                     </div>
                                 </div>
 
